# instructions

./: .gitignore  ACCESS_CONTROL.md  ADDITIONAL_INSTRUCTIONS.md  AGENTS.md  AIML_SECURITY.md  API_GUIDELINES.md  BACKEND.md  BACKEND_LIBRARY_SELECTION.md  BACKEND_MIGRATION.md  CLAUDE.md  CODEX.md  CODE_COMPLETE.checklist.md  CODE_COMPLETE.md  CODING_STYLE.md  COMMENTING.md  COMPONENT_INDEX.md  COPYRIGHT_HEADER.md  COPYRIGHT_INFO.md  Claude.md  DEBUGGING_DATABASES.md  DELETION.md  DISTRIBUTED_SYSTEMS_COMPENDIUM.md  DOCUMENTATION.md  DOTNETCOREFRAMEWORKS.csv  DOTNETFX.csv  DOTNETFX_SELECTION.md  ERROR_DIALOG_COMPONENT.md  FRONTEND.md  FRONTEND_LIBRARY_SELECTION.md  FRONTEND_SELECTION.md  GEMINI.md  GOF_PATTERNS.md  KNOWLEDGE_ARCHITECTURE.md  LANGUAGE.md  LCV_DESIGN.md  LICENSE  LITERATE_ERRORS.md  LLM_TECHNIQUES.md  LOGGING.md  LOGGING_RAW.md  (+20 more)
agentknowledge/: lcv_constraints.yaml
instructions/: Frontend Instructions.md  LoggingMetrics.md  Migration.md  Monoliths.md  agent.md  dotnetcoreframeworks.csv  dotnetfx.csv
scripts/: REPO_TOOLS_README.md  install-hooks.sh  repo-index.py  repo-index.sh  repo_index_lib.py
scripts/metrics/: README.md  pyproject.toml  repo-metrics.sh
scripts/metrics/src/: complexity.py  history.py  languages.py  main.py  scanner.py
scripts/metrics/src/extractors/: __init__.py  csharp.py  css_html.py  python_ext.py  sql.py  typescript.py
scripts/metrics/src/renderers/: __init__.py  html_renderer.py  json_renderer.py  markdown_renderer.py
scripts/metrics/templates/: report.html.j2
