[project]
name = "repo-metrics"
version = "1.0.0"
description = "Standalone CLI tool to track codebase growth and quality trends."
authors = [
    { name = "Gemini CLI", email = "gemini-cli@google.com" }
]
dependencies = [
    "pyyaml",
    "jinja2",
    "click",
    "rich"
]
requires-python = ">=3.11"

[project.scripts]
repo-metrics = "main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
